--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,3 +1,17 @@
 .luffyCard {
 
 }
+.card {
+  border: none;
+}
+.cardTitle {
+  font-size: 2rem;
+}
+.cardImage {
+  border-radius: 12px;
+  max-height: 330px;
+  filter: brightness(0.7)
+}
+.overlay-dark {
+  background-color: rgba(black, 0.4);
+}
