--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -3,7 +3,8 @@
 }
 .card {
   border: none;
-  border-radius: 12px;;
+  border-radius: 12px;
+  background-color: transparent;
 }
 .cardTitle {
   font-size: 2rem;
@@ -13,6 +14,11 @@
   max-height: 330px;
   filter: brightness(0.6)
 }
-.overlay-dark {
-  background-color: rgba(black, 0.4);
+
+.text-neonPink {
+  color: #fc207a;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
