--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Gentium+Basic&family=Playfair+Display:ital,wght@0,600;1,400;1,600&family=Shadows+Into+Light&display=swap');
+
 html, .app {
   background-color: #000912;
 }
