Increase the padding on the built by section. Rename the my-name class so the font can be used more clearly elsewhere.

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,7 +1,7 @@
 .nav-padding {
-  padding: 0.5em 1em;
+  padding: 0.7em 1em;
 }
-.my-name {
+.shadows-font {
   font-family: 'Shadows Into Light', cursive;
 }
 .crescentMoon {
