Increase the font size on my name and add a margin to the copyright so it lines up with the year.

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,8 @@
 .nav-padding {
-  padding: 0.7em 1em;
+  padding: 0.7\em 1em;
+}
+.my-name{
+  font-size: 1.1rem;
 }
 .shadows-font {
   font-family: 'Shadows Into Light', cursive;
@@ -9,4 +12,7 @@
 }
 .footer-border {
   border-top: 1px solid #18212b;
+}
+.copyright {
+  margin-top:0.17rem;
 }
