--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,3 +1,9 @@
 .contact-bg {
   background-color: #c7d0d8;
 }
+.rounded-container {
+  border-radius: 13px;
+}
+.form-control {
+  border-radius: 0.5rem;
+}
