--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -13,6 +13,10 @@
 .form-label {
   font-weight: 700;
 }
+.form-mobile {
+  margin-top: 2rem;
+  padding: 0.5rem !important;
+}
 .font-bold {
   font-weight: bold;
 }
