--- a/src/components/Resume/resume.css
+++ b/src/components/Resume/resume.css
@@ -13,7 +13,9 @@ iframe {
   margin-right: auto;
 }
 
-
+.font-italic { 
+  font-style: italic;
+}
 
 @media (min-width: 440px) and (max-width: 575px) { 
   iframe {
