--- a/src/components/Resume/resume.css
+++ b/src/components/Resume/resume.css
@@ -12,9 +12,14 @@ iframe {
   margin-left: auto;
   margin-right: auto;
 }
-
 .font-italic { 
   font-style: italic;
+}
+.w-84 {
+  width: 84%;
+}
+.info-button {
+  font-size: 0.6rem;
 }
 
 @media (min-width: 440px) and (max-width: 575px) { 
@@ -38,15 +43,17 @@ iframe {
 @media (min-width: 768px) and (max-width:991px) { 
   iframe {
     height: 40rem;
-  }  
+  }
+  .info-button {
+    font-size: 0.7rem;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) and (max-width: 1199.98px) { 
+@media (min-width: 992px) and (max-width: 1199px) { 
   iframe {
     height: 42rem;
   }
-  
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
@@ -56,10 +63,23 @@ iframe {
   }
 }
 
+@media (min-width: 1200px) { 
+  .showmore-container {
+    max-width: 84%;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1399px) { 
+  .info-button {
+    font-size: 0.8rem;
+  }
+}
  /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1400px) { 
   iframe {
     height: 47rem;
   }
-  
+  .info-button {
+    font-size: 0.9rem;
+  }
 }
